--- a/app_festa/templates/festa_home/home.html
+++ b/app_festa/templates/festa_home/home.html
@@ -116,7 +116,7 @@
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="{% static 'js/home_js.js' %}"></script>
+<script type="text/javascript" src="/static/js/home_js.js?ver=1"></script>
 
 <style>
     /* 전체 컨테이너 셋팅 */
