--- a/app_festaNow/templates/festa_now/detail.html
+++ b/app_festaNow/templates/festa_now/detail.html
@@ -17,7 +17,7 @@
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="{% static 'js/detail_js.js' %}"></script>
+<script type="text/javascript" src="/static/js/detail_js.js?ver=2'"></script>
 
 <style>
     #select_box {
