--- a/app_festaNow/templates/festa_now/staff/login.html
+++ b/app_festaNow/templates/festa_now/staff/login.html
@@ -26,7 +26,7 @@
  </div>
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="{% static 'js/login_js.js' %}"></script>
+<script type="text/javascript" src="/static/js/login_js.js?ver=2' %}"></script>
 <style>
     #certificate_box {
         height: auto;
