--- a/app_festaNow/templates/festa_now/staff/staff_home.html
+++ b/app_festaNow/templates/festa_now/staff/staff_home.html
@@ -1,7 +1,7 @@
-{% extends 'home_board.html' %}
+{% extends 'base_copyright_version.html' %}
 {% block content %}
 
-<div class="row">
+<!-- <div class="row">
     <div class="col-md-5">
         <img src ="{{festa.poster.url}}" style="height:500px">
         <ul>
@@ -19,5 +19,8 @@
             </ul>
 
 
-    </div>
+    </div> -->
+    <!-- 자바 스크립트 연결 -->
+{% load static %}
+<script type="text/javascript" src="{% static 'js/standard_js.js' %}"></script>
 {% endblock %}
