--- a/project_festa/templates/base.html
+++ b/project_festa/templates/base.html
@@ -46,26 +46,40 @@
 
     <div id="container_select_staff_audience">
         <div id="festa_image">
-                <div id="user_item_selector">
-                        <img src="{{festa.poster.url}}" style="height:500px">
-                        <ul class="vertical-menu">
-                            <!-- url 이름 바껴서 밑에 한줄만 바꿨어욤 ㅎㅎ  -->
-                            <li><a href="{% url 'staff_main' festa.id %}">공지사항</a></li>
-                
-                            <li><a href="{% url 'now_team' festa.id %}">팀별 게시판</a></li>
-                
-                            <li><a href="{% url 'staff_map' festa.id %}">지도</a></li>
-                
-                            <li><a href="">찾아가라</a></li>
-                
-                            <li><a href="{% url 'staff_home' festa.id %}">집가자</a></li>
-                
-                        </ul>
-                
+            <img id="detail_background_img" src="/static/image/detail_background.png" alt="detail">
+            <div id="detail_foreground_div">
+                <div id="foreground_content_div">
+                    <div id="title_text_wrapper">
+                        Festa Now
                     </div>
-            <!-- <img id="detail_background_img" src="/static/image/detail_background.png" alt="detail"> -->
-            <div class="img_wrapper">
-                <img class="detail_thumnail" src="{{ festa_now.poster.url }}">
+                    <div id="fore_img_wrapper">
+                        <img id="fore_img" src="{{festa.poster.url}}" style="height:500px">
+                    </div>
+                    <div id="festa_info_wrapper">
+                        <div id="festa_name">
+                            페스타 이름들어갈 거에요~
+                        </div>
+                        <div id="festa_date">
+                            날짜 들어갈 거에요~
+                        </div>
+                    </div>
+                    <div id="menu_wrapper">
+                        <ul class="vertical-menu">
+                    
+                            <li><a href="{% url 'staff_main' festa.id %}">공지사항</a></li>
+
+                            <li><a href="{% url 'now_team' festa.id %}">팀별 게시판</a></li>
+
+                            <li><a href="{% url 'staff_map' festa.id %}">지도</a></li>
+
+                            <li><a href="">찾아가라</a></li>
+
+                            <li><a href="{% url 'staff_home' festa.id %}">집가자</a></li>
+
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
         <div id="festa_select_box">
@@ -88,7 +102,7 @@
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="{% static 'js/base_js.js' %}"></script>
+<script type="text/javascript" src="/static/js/base_js.js?ver=2"></script>
 
 </html>
 
@@ -119,18 +133,64 @@
     }
 
     #festa_image {
-        width: 35%;
+        position: relative;
+        width: 40%;
         background: #ffffff;
     }
 
-    #festa_select_box {
-        width: 65%;
-        background: #EEE9F7;
-        display: flex;
+    #detail_foreground_div{
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
     }
 
-    .img_wrapper {
+    #foreground_content_div{
         width: 100%;
-        overflow: hidden;
+        height: 100%;
+        padding-top: 8%;
+    }
+
+    #fore_img_wrapper, #menu_wrapper, #title_text_wrapper, #festa_info_wrapper{
+        margin-left: 32%;
+        margin-right: 15%;
+    }
+
+    #title_text_wrapper{
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    #fore_img_wrapper{
+        margin-top: 20px;
+    }
+
+    #festa_info_wrapper{
+        margin-top: 16px;
+    }
+
+    #festa_name{
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    #festa_date{
+        font-size: 14px;
+        font-weight: 500;
+        opacity: 0.5;
+    }
+
+    #menu_wrapper{
+        display: none;
+        margin-top: 40px;
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    #festa_select_box {
+        width: 60%;
+        background: #EEE9F7;
+        display: flex;
     }
 </style>
