--- a/app_festaNow/templates/festa_now/audience/detail_now.html
+++ b/app_festaNow/templates/festa_now/audience/detail_now.html
@@ -37,6 +37,8 @@
             <h2>[Title] : {{now.title}}</h2>
             <p>[Writer] : {{now.writer}}</p>
             <p>[Date of Issue] : {{now.pub_date}}</p>
+            <p>[Post Type] : {{now.post_type}}</p>
+             
             <p>
                 [Body]
                 <br>
