--- a/app_festaNow/templates/festa_now/staff/detail_team.html
+++ b/app_festaNow/templates/festa_now/staff/detail_team.html
@@ -38,6 +38,7 @@
             <h2>[Title] : {{team.title2}}</h2>
             <p>[Writer] : {{team.writer2}}</p>
             <p>[Date of Issue] : {{team.pub_date}}</p>
+            <p>[POST_TYPE] : {{team.post_type}}</p>
             <p>
                 [Body]
                 <br>
