--- a/app_festaNow/templates/festa_now/new_home.html
+++ b/app_festaNow/templates/festa_now/new_home.html
@@ -10,27 +10,32 @@
 
 <body>
 <center>
-    <h1>새 글을 작성해주세요</h1>
+    <h1>집가자</h1>
     <input type="button" value="뒤로가기" onclick="history.back(-1);">
     <br>
     <br>
     <form action="{% url 'create_home' festa.id %}" method="POST">
         {% csrf_token %}
-        [Title] : <input type="text" name='title'>
+        [Title] : <input type="text" name='title' placeholder="제목을 입력해 주세요">
         <br>
         <br>
         [Writer] : <input type="text" name='writer'>
         <br>
         <br>
-        [Region] : <input type="text" name='region'>
+        [Region] : 
+        <select name="region">
+            <option name="서울">서울</option>
+            <option name="경기">경기</option>
+            <option name="제주">제주</option>
+        </select>
         <br>
         <br>
         [Body]
         <br>
-        <textarea name="body" id="" cols="30" rows="10" placeholder="write your content" style="padding:10px; margin:10px;"></textarea>
+        <textarea name="body" id="" cols="30" rows="10" placeholder="내용을 입력해 주세요" style="padding:10px; margin:10px;"></textarea>
         <br>
         
-        <button type='submit'>작성하기</button>
+        <button type='submit'>게시글 작성</button>
     </form>
 </center>
 </body>
