--- a/app_festaReady/templates/festa_ready/create_accompany.html
+++ b/app_festaReady/templates/festa_ready/create_accompany.html
@@ -3,7 +3,7 @@
 <form action=" {% url 'create_accompany' festa.id %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <label>제목</label><br>
-        <input type="text" name="title"><br>
+        <input type="text" name="title" placeholder="제목을 입력해 주세요"><br>
     
         <label>작성자</label><br>
         <input type="text" name="writer"><br>
@@ -12,13 +12,17 @@
         <input type="password" name="password"><br>
     
         <label>지역</label><br>
-        <input type="text" name="area"><br>
+        <select name="area">
+            <option value="서울">서울</option>
+            <option value="경기">경기</option>
+            <option value="제주">제주</option>
+        </select><br>
     
         <label>내용</label><br>
-        <textarea name="description"></textarea><br>
+        <textarea name="description" placeholder="내용을 입력해 주세요"></textarea><br>
 
         <label>이미지</label>
         <input type="file" name="image"><br>
     
-        <input type="submit" class="btn btn-primary" value="등록">
+        <input type="submit" class="btn btn-primary" value="게시글 작성">
     </form>
