--- a/app_festaReady/templates/festa_ready/create_ticket.html
+++ b/app_festaReady/templates/festa_ready/create_ticket.html
@@ -1,8 +1,9 @@
+<h1>티켓 양도/교환</h1>
 
 <form action=" {% url 'create_ticket' festa.id %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <label>제목</label><br>
-        <input type="text" name="title"><br>
+        <input type="text" name="title" placeholder="제목을 입력해 주세요"><br>
     
         <label>작성자</label><br>
         <input type="text" name="writer"><br>
@@ -11,13 +12,19 @@
         <input type="password" name="password"><br>
     
         <label>거래방법</label><br>
-        <input type="text" name="deal_type"><br>
+        <select name="deal_type">
+            <option value="양도해요">양도해요</option>
+            <option value="양도받아요">양도받아요</option>
+            <option value="교환">교환</option>
+        </select><br>
     
         <label>내용</label><br>
-        <textarea name="description"></textarea><br>
+        <textarea name="description" placeholder="내용을 입력해 주세요"></textarea><br>
         
-        <label>이미지</label>
+        <label>이미지 첨부</label>
         <input type="file" name="image"><br>
-    
-        <input type="submit" class="btn btn-primary" value="등록">
+
+        <p>티켓양도/교환 게시판의 경우, 이메일 인증을 완료해야 글을 업로드 하실 수 있습니다.</p>
+        <!-- 걍 등록버튼이예여 일단...ㅎ.ㅎㅎ...ㅎㅎ.ㅎㅎㅎ -->
+        <input type="submit" class="btn btn-primary" value="이메일 인증">
     </form>
