--- a/app_festaReady/templates/festa_ready/edit_ticket.html
+++ b/app_festaReady/templates/festa_ready/edit_ticket.html
@@ -10,11 +10,15 @@
         <label>비밀번호</label><br>
         <input type="password" name="password"><br>
     
-        <label>지역</label><br>
-        <input type="text" name="deal_type" value="{{ ticket.deal_type }}"><br>
+        <label>거래타입</label><br>
+        <select name="deal_type" value="deal_type">
+            <option value="양도해요">양도해요</option>
+            <option value="양도받아요">양도받아요</option>
+            <option value="교환">교환</option>
+        </select><br>
     
         <label>내용</label><br>
         <textarea name="description">{{ticket.description}}</textarea><br>
     
-        <input type="submit" class="btn btn-primary" value="수정">
+        <input type="submit" class="btn btn-primary" value="게시글 수정">
     </form>
