add lost_found board

--- a/app_festaNow/templates/festa_now/audience/map.html
+++ b/app_festaNow/templates/festa_now/audience/map.html
@@ -19,7 +19,7 @@
 
             <li><a href="{% url 'audience_map' festa.id %}">지도</a></li>
 
-            <li><a href="">찾아가라</a></li>
+            <li><a href="{% url 'audience_lost_found' festa.id %}">찾아가라</a></li>
 
             <li><a href="{% url 'audience_home' festa.id %}">집가자</a></li>
 
