--- a/project_festa/templates/base.html
+++ b/project_festa/templates/base.html
@@ -72,7 +72,7 @@
 
                             <li><a href="{% url 'staff_map' festa.id %}">지도</a></li>
 
-                            <li><a href="">찾아가라</a></li>
+                            <li><a href="{% url 'staff_lost_found' festa.id %}">찾아가라</a></li>
 
                             <li><a href="{% url 'staff_home' festa.id %}">집가자</a></li>
 
