--- a/app_festaNow/templates/festa_now/staff/new_team.html
+++ b/app_festaNow/templates/festa_now/staff/new_team.html
@@ -24,7 +24,8 @@
         <br>
         [POST_TYPE]
         <select name="post_type">
-            <option name="중요">중요</option>
+            <option name="공지사항">공지사항</option>
+            <option name="긴급공지">긴급공지</option>
             <option name="질문">질문</option>
         </select>
         <br>
