--- a/app_festaReady/templates/festa_ready/edit_accompany.html
+++ b/app_festaReady/templates/festa_ready/edit_accompany.html
@@ -13,9 +13,16 @@
     
         <label>지역</label><br>
         <select name="area" value="{{ accompany.area }}">
-            <option value="서울">서울</option>
-            <option value="경기">경기</option>
-            <option value="제주">제주</option>
+            <option name="서울">서울</option>
+            <option name="경기">경기</option>
+            <option name="강원">강원</option>
+            <option name="충북">충북</option>
+            <option name="충남">충남</option>
+            <option name="경북">경북</option>
+            <option name="경남">경남</option>
+            <option name="전북">전북</option>
+            <option name="전남">전남</option>
+            <option name="제주">제주</option>
         </select><br>
 
         <label>내용</label><br>
