--- a/app_festaNow/templates/festa_now/audience/home/new_home.html
+++ b/app_festaNow/templates/festa_now/audience/home/new_home.html
@@ -26,6 +26,13 @@
         <select name="region">
             <option name="서울">서울</option>
             <option name="경기">경기</option>
+            <option name="강원">강원</option>
+            <option name="충북">충북</option>
+            <option name="충남">충남</option>
+            <option name="경북">경북</option>
+            <option name="경남">경남</option>
+            <option name="전북">전북</option>
+            <option name="전남">전남</option>
             <option name="제주">제주</option>
         </select>
         <br>
