--- a/app_festaNow/templates/festa_now/staff/home/edit_home.html
+++ b/app_festaNow/templates/festa_now/staff/home/edit_home.html
@@ -2,41 +2,48 @@
 <html lang="en">
 
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 
 <body>
-<center>
+    <center>
         <h1>글을 수정중입니다.</h1>
         <form action="{% url 's_update_home' festa.id home.id %}" method="POST">
-                {% csrf_token %}
-                [Title] : <input type="text" name='title' value="{{home.title}}">
-                <br>
-                <br>
-                [Wirter] : <input type="text" name='writer' value="{{home.writer}}">
-                <br>
-                <br>
-                
-                [Region] : 
-                <select name="region">
-                    <option name="서울">서울</option>
-                    <option name="경기">경기</option>
-                    <option name="제주">제주</option>
-                </select>
-                <br>
-                <br>
-                [Body]
-                <br>
-                <textarea name="body" id="" cols="30" rows="10"
-                        placeholder="write your content"style="padding:10px; margin:10px;" >{{home.body}}</textarea>
-                <br>
-                <br>
-                <button type='submit'>게시글 수정</button>
+            {% csrf_token %}
+            [Title] : <input type="text" name='title' value="{{home.title}}">
+            <br>
+            <br>
+            [Wirter] : <input type="text" name='writer' value="{{home.writer}}">
+            <br>
+            <br>
+
+            [Region] :
+            <select name="region">
+                <option name="서울">서울</option>
+                <option name="경기">경기</option>
+                <option name="강원">강원</option>
+                <option name="충북">충북</option>
+                <option name="충남">충남</option>
+                <option name="경북">경북</option>
+                <option name="경남">경남</option>
+                <option name="전북">전북</option>
+                <option name="전남">전남</option>
+                <option name="제주">제주</option>
+            </select>
+            <br>
+            <br>
+            [Body]
+            <br>
+            <textarea name="body" id="" cols="30" rows="10" placeholder="write your content"
+                style="padding:10px; margin:10px;">{{home.body}}</textarea>
+            <br>
+            <br>
+            <button type='submit'>게시글 수정</button>
         </form>
-</center>
+    </center>
 </body>
 
 </html>
