--- a/app_festaReady/templates/festa_ready/edit_ticket.html
+++ b/app_festaReady/templates/festa_ready/edit_ticket.html
@@ -14,7 +14,7 @@
         <select name="deal_type" value="deal_type">
             <option value="양도해요">양도해요</option>
             <option value="양도받아요">양도받아요</option>
-            <option value="교환">교환</option>
+            <option value="교환해요">교환해요</option>
         </select><br>
     
         <label>내용</label><br>
