list_ticket, list_accompany ui modify

--- a/app_festaReady/templates/festa_ready/ready_main.html
+++ b/app_festaReady/templates/festa_ready/ready_main.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div id="ready_div">
+<div id="ready_festaInfo_div">
     <div>
         <h1>공연 이름 :{{ festa.name }}</h1>
         <p>공연 날짜 : {{ festa.schedule|date:"Y"}}년 {{ festa.schedule|date:"m"}}월 {{ festa.schedule|date:"d"}}일</p>
