--- a/app_festaReady/templates/festa_ready/list_accompany.html
+++ b/app_festaReady/templates/festa_ready/list_accompany.html
@@ -1,29 +1,6 @@
 {% extends 'base.html' %}
-<!-- 
-[base.html]
-<head>
-</head>
-
-<body>
- -->
- {% block content %}
- 
-    <div class="row">
-        <div class="col-md-5">
-            <img src = "{{festa.poster.url}}" style="height:500px">
-            <ul class="vertical-menu">
-
-                <li><a href="{% url 'ready_main' festa.id %}">공연정보</a></li>
-                
-                <li><a href="{% url 'list_accompany' festa.id %}">동행구하기</a></li>
-                
-                <li><a href="{% url 'list_ticket' festa.id %}">티켓 양도/교환</a></li>
-
-            </ul>
-    </div>
-
-    <div class="col-md-7" style="background-color:#EEE9F7; ">
-
+{% block content %}
+<div id="ready_partner_div">
         <a href="{% url 'create_accompany' festa.id %}" class="btn btn-primary">글쓰기</a>
 
         <form action="" method="get">
@@ -59,9 +36,10 @@
         {% endif %}
 
         </div>
+</div>
 
-        <br><br>
-
-    </div>
+<!-- 자바 스크립트 연결 -->
+{% load static %}
+<script type="text/javascript" src="/static/js/ready_standard_js.js?ver=1' %}"></script>
 
 {% endblock %}
