--- a/app_festaReady/templates/festa_ready/list_ticket.html
+++ b/app_festaReady/templates/festa_ready/list_ticket.html
@@ -1,67 +1,45 @@
 {% extends 'base.html' %}
-<!-- 
-[base.html]
-<head>
-</head>
+{% block content %}
 
-<body>
- -->
- {% block content %}
- 
-    <div class="row">
-        <div class="col-md-5">
-            <img src = "{{festa.poster.url}}" style="height:500px">
-            <ul class="vertical-menu">
-
-                <li><a href="{% url 'ready_main' festa.id %}">공연정보</a></li>
-                
-                <li><a href="{% url 'list_accompany' festa.id %}">동행구하기</a></li>
-                
-                <li><a href="{% url 'list_ticket' festa.id %}">티켓 양도/교환</a></li>
-
-            </ul>
-    </div>
-
-    <div class="col-md-7" style="background-color:#EEE9F7; ">
-
-            <a href="{% url 'create_ticket' festa.id %}" class="btn btn-primary">글쓰기</a>
+<div id="ready_ticket_trade_div">
+        <a href="{% url 'create_ticket' festa.id %}" class="btn btn-primary">글쓰기</a>
             
-            <form action="" method="get">
-                    <input type="text" name="search" value="{{ search }}">
-                    <input type="submit" value="검색">
-            </form>
-            <p>----------------------------</p>
-    
-    
-            {% for ticket in posts %}
-            <p> 제목: {{ticket.title}}</p>
-            <p> 거래방법: {{ticket.deal_type}}</p>
-            <p> 작성자: {{ticket.writer}}</p>
-            <a href="{% url 'detail_ticket' festa.id ticket.id%}" class="btn btn-primary">보러가기</a>
-            <p>----------------------------</p>
-            {% endfor %}
-    
-            <div class="container">
-    
-            {% if posts.has_previous %}
-            <a href="?page=1">first</a>
-            <a href="?page={{posts.previous_page_number}}">Previous</a>
-            {% endif %}
-    
-            <span>{{posts.number}}</span>
-            <span>of</span>
-            <span>{{posts.paginator.num_pages}}</span>
-    
-            {% if posts.has_next %}
-            <a href="?page={{posts.next_page_number}}">Next</a>
-            <a href="?page={{posts.paginator.num_pages}}">Last</a>
-            {% endif %}
-    
-            </div>
-    
-            <br><br>
+        <form action="" method="get">
+                <input type="text" name="search" value="{{ search }}">
+                <input type="submit" value="검색">
+        </form>
+        <p>----------------------------</p>
 
-    </div>
 
+        {% for ticket in posts %}
+        <p> 제목: {{ticket.title}}</p>
+        <p> 거래방법: {{ticket.deal_type}}</p>
+        <p> 작성자: {{ticket.writer}}</p>
+        <a href="{% url 'detail_ticket' festa.id ticket.id%}" class="btn btn-primary">보러가기</a>
+        <p>----------------------------</p>
+        {% endfor %}
+
+        <div class="container">
+
+        {% if posts.has_previous %}
+        <a href="?page=1">first</a>
+        <a href="?page={{posts.previous_page_number}}">Previous</a>
+        {% endif %}
+
+        <span>{{posts.number}}</span>
+        <span>of</span>
+        <span>{{posts.paginator.num_pages}}</span>
+
+        {% if posts.has_next %}
+        <a href="?page={{posts.next_page_number}}">Next</a>
+        <a href="?page={{posts.paginator.num_pages}}">Last</a>
+        {% endif %}
+
+        </div>
+</div>
+
+<!-- 자바 스크립트 연결 -->
+{% load static %}
+<script type="text/javascript" src="/static/js/ready_standard_js.js?ver=1' %}"></script>
 
 {% endblock %}
