--- a/app_festaNow/templates/festa_now/staff/login.html
+++ b/app_festaNow/templates/festa_now/staff/login.html
@@ -4,19 +4,19 @@
  <div id="certificate_box">
         <div id="explain_text_box">인증번호를 입력해주세요</div>
         <div id="booked_name_and_num">
-            <form id="edit_box_form" action="{% url 'staff_main' festa.id %}" method="POST">
+                <form id="edit_box_form" action="{% url 'staff_main' festa.id %}" method="POST">
                 {% csrf_token %}
-                <div id="invisible_edit_box">
+                <div class="visible_edit_box">
                     <div id="reserve_span">
                         <span>이름</span>
-                    </div>
+                    </div class="bt_wrapper">
                         <input type="text" name="reservation_name" value="1234"></p>
                     </div>
-                <div id="visible_edit_box">
+                <div class="visible_edit_box">
                     <div id="reserve_span">
                             <span>예매 번호</span>
                     </div>
-                    <div id="bt_wrapper">
+                    <div class="bt_wrapper">
                             <input id="num_editText" type="text" name="reservation_num" placeholder="1234">
                             <input id="certificateBt" type="submit" value="&#xf064" class="fa-7x">
                     </div>   
@@ -26,7 +26,7 @@
  </div>
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="/static/js/login_js.js?ver=2' %}"></script>
+<script type="text/javascript" src="/static/js/login_js.js?ver=5' %}"></script>
 <style>
     #certificate_box {
         height: auto;
@@ -42,6 +42,7 @@
     }
     #booked_name_and_num {
         width: 100%;
+        padding-bottom: 68px;
     }
 
     #edit_box_form{
@@ -52,9 +53,10 @@
         font-weight: 500;
     }
 
-    #visible_edit_box, #invisible_edit_box{
+    .visible_edit_box{
         display: flex;
         width: 100%;
+        padding-bottom: 68px;
     }
 
     #reserve_span{
@@ -64,18 +66,14 @@
         align-self: center;
     }
 
-    #invisible_edit_box{
-        /* display: none; */
-    }
-
-    #bt_wrapper{
+    .bt_wrapper{
         border: 1px solid #9e9e9e;
         height: auto;
         width: 70%;
         margin-left: 7%;
     }
 
-    #bt_wrapper input{
+    .bt_wrapper input{
         float: left;
         border: 0px;
     }
