--- a/app_festaNow/templates/festa_now/staff/staff_main.html
+++ b/app_festaNow/templates/festa_now/staff/staff_main.html
@@ -2,6 +2,9 @@
 {% block content %}
 
 <div id="notice_div">
+    <div id="subtitle_text_wrapper">
+        공지사항
+    </div>
     <div id="table_bt_div">
         <span><input type="submit" value="글쓰기"></span>
         <div id="table_div">
@@ -39,12 +42,26 @@
 <script type="text/javascript" src="/static/js/standard_js.js?ver=2' %}"></script>
 
 <style>
+    #notice_div{
+        width: 100%;
+        height: 100%;
+        padding-top: 50px;
+        padding-left: 3%;
+        padding-right: 20%;
+    }
+    #subtitle_text_wrapper {
+        font-size: 20px;
+        font-weight: bold;
+        min-width: 525px;
+    }
     #table_bt_div {
         background: #ffffff;
         padding-left: 3%;
         padding-right: 3%;
         padding-top: 5%;
         padding-bottom: 5%;
+        margin-top: 20px;
+        min-width: 525px;
     }
 
     #table_div {
